Add shopping list section to index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,25 @@
                         </div>
                     </div>
                 </div>
-                
+            </div>
+            
+            <!-- Système Liste de Courses -->
+            <div class="shopping-section">
+                <button id="shoppingToggle" class="shopping-btn">🛒 Ma Liste de Courses</button>
+
+                <div id="shoppingList" class="shopping-list hidden">
+                    <div class="shopping-header">
+                        <h3>📋 Mes Ingrédients</h3>
+                        <div class="shopping-buttons">
+                            <button id="printList" class="print-btn">🖨️ Imprimer</button>
+                            <button id="clearList" class="clear-btn">🗑️ Vider tout</button>
+                        </div>
+                    </div>
+                    <ul id="ingredientsList"></ul>
+                    <div class="shopping-footer">
+                        <small>Sélectionnées : <strong id="totalRecipes">0</strong> recette(s)</small>
+                    </div>
+                </div>
             </div>
         </main>
 
