Fix typo in omelette references in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <!-- Omelette -->
-                <div class="recipe-card" onclick="openModal('omelette')">
+                <div class="recipe-card" onclick="openModal('omelett')">
                     <img
                         src="images/Omelette%20Full%20L%C3%A9gumes.jpeg"
                         alt="Omelette full légumes"
@@ -275,7 +275,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h2>Omelette Full Légumes</h2>
-                    <button class="close-btn" onclick="closeModal('omelette')">&times;</button>
+                    <button class="close-btn" onclick="closeModal('omelett')">&times;</button>
                 </div>
                 <div class="modal-body">
                     <img
@@ -449,7 +449,7 @@
             </div>
         </div>
 
-        <div id="yaourt Modal" class="modal">
+        <div id="yaourtModal" class="modal">
             <div class="modal-content">
                 <div class="modal-header">
                     <h2>Yaourt Protéiné Dessert</h2>
