Planning de sport
J'ai ajouté une page pour les programmes de sport.

Pour l'instant j'ai créer un planning rudimentaire. Je vais l'améliorer.

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                     automatiquement dans la page <strong>"Mes calories"</strong>.
                 </p>
                 <div class="home-actions">
-                    <a href="recettes.html" class="home-btn-primary">
+                    <a href="sport-planning.html" class="home-btn-primary">
                         🔥 Programme de sport
                     </a>
                     <a href="recettes.html" class="home-btn-primary">
