--- a/sport-planning.html
+++ b/sport-planning.html
@@ -40,6 +40,7 @@
             </div>
 
             <!-- Une ligne par jour -->
+            <!-- Lundi -->
             <div class="planning-row" data-day="Lundi">
                 <div class="planning-cell planning-day">Lundi</div>
                 <div class="planning-cell">
@@ -56,6 +57,7 @@
                 </div>
             </div>
 
+            <!-- Mardi -->
             <div class="planning-row" data-day="Mardi">
                 <div class="planning-cell planning-day">Mardi</div>
                 <div class="planning-cell">
@@ -72,6 +74,7 @@
                 </div>
             </div>
 
+            <!-- Mercredi -->
             <div class="planning-row" data-day="Mercredi">
                 <div class="planning-cell planning-day">Mercredi</div>
                 <div class="planning-cell">
@@ -88,6 +91,7 @@
                 </div>
             </div>
 
+            <!-- Jeudi -->
             <div class="planning-row" data-day="Jeudi">
                 <div class="planning-cell planning-day">Jeudi</div>
                 <div class="planning-cell">
@@ -104,6 +108,7 @@
                 </div>
             </div>
 
+            <!-- Vendredi -->
             <div class="planning-row" data-day="Vendredi">
                 <div class="planning-cell planning-day">Vendredi</div>
                 <div class="planning-cell">
@@ -120,6 +125,7 @@
                 </div>
             </div>
 
+            <!-- Samedi -->
             <div class="planning-row" data-day="Samedi">
                 <div class="planning-cell planning-day">Samedi</div>
                 <div class="planning-cell">
@@ -136,6 +142,7 @@
                 </div>
             </div>
 
+            <!-- Dimanche -->
             <div class="planning-row" data-day="Dimanche">
                 <div class="planning-cell planning-day">Dimanche</div>
                 <div class="planning-cell">
@@ -151,24 +158,6 @@
                     <span class="planning-duration">–</span>
                 </div>
             </div>
-
-            <div class="planning-row" data-day="Dimanche">
-                <div class="planning-cell planning-day">Dimanche</div>
-                <div class="planning-cell">
-                    <input type="text" class="planning-input" placeholder="Ex : Repos / marche 🚶‍♀️">
-                </div>
-                <div class="planning-cell">
-                    <input type="time" class="planning-input">
-                </div>
-                <div class="planning-cell">
-                    <select class="planning-input">
-                        <option value="">–</option>
-                        <option value="faible">Faible</option>
-                        <option value="modérée">Modérée</option>
-                        <option value="élevée">Élevée</option>
-                    </select>
-                </div>
-            </div>
         </div>
 
         <p class="planning-note">
@@ -181,6 +170,6 @@
     <p>Recettes Minceur Light – Version sport 💪</p>
 </footer>
 
-<script src="sport-planning.js"></script>
+<script src="sport-planning-script.js"></script>
 </body>
 </html>
