--- a/calories.html
+++ b/calories.html
@@ -11,7 +11,7 @@
     <header>
         <div style="display: flex; justify-content: space-between; align-items: center; max-width: 1200px; margin: 0 auto;">
             <div>
-                <div class="back-btn" onclick="window.location.href='recettes.html'">← Retour Recettes</div>
+                <div class="back-btn" onclick="window.location.href='index.html'">← Retour Recettes</div>
                 <h1>📊 Mes Calories</h1>
                 <div class="stats-summary">
                     <div class="stat-card">
