Patch vidéo TikTok

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                     <a href="sport-planning.html" class="home-btn-primary">
                         🔥 Programme de sport
                     </a>
-                    <a href="recettes.html" class="home-btn-primary">
+                    <a href="index.html" class="home-btn-primary">
                         🍽️ Découvrir les recettes
                     </a>
                     <a href="calories.html" class="home-btn-secondary">
