--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <!-- Poulet frit, riz et légumes -->
                 <div class="recipe-card" onclick="openModal('poulet_frit1')">
                     <img 
-                        src="images/Poulet%20frit,%20riz%20et%20le%CC%81gumes.png" 
+                        src="images/Poulet frit, riz et légumes.png" 
                         alt="Poulet frit, riz et légumes" 
                         class="recipe-image">
                     <div class="recipe-content">
@@ -1425,7 +1425,7 @@
                 </div>
                 <div class="modal-body">
                     <img 
-                        src="images/Poulet%20frit,%20riz%20et%20le%CC%81gumes.png" 
+                        src="images/Poulet frit, riz et légumes.png" 
                         alt="Poulet frit, riz et légumes" 
                         class="modal-image" />
 
@@ -1591,3 +1591,4 @@
         <script src="recettes-script.js"></script>
     </body>
 </html>
+
